--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -243,12 +243,16 @@
     "    final_df = pd.DataFrame(listForDF)\n",
     "\n",
     "    try:\n",
-    "        final_df.to_csv(path_or_buf='data/aggregatedDly.csv', sep=',', columns=final_df.columns.tolist())\n",
+    "        final_df.to_csv(\n",
+    "            path_or_buf=\"data/aggregatedDly.csv\",\n",
+    "            sep=\",\",\n",
+    "            columns=final_df.columns.tolist(),\n",
+    "        )\n",
     "        # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
     "    except Exception as e:\n",
-    "        print('[ERROR]')\n",
+    "        print(\"[ERROR]\")\n",
     "        print(e)\n",
-    "    \n",
+    "\n",
     "    db.cleanup()"
    ]
   },
