station correlation plots (#73)

--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -242,7 +242,17 @@
     "    listForDF = reshapeDlyData(dates, agg_df, stationData)\n",
     "    final_df = pd.DataFrame(listForDF)\n",
     "\n",
-    "    # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    try:\n",
+    "        final_df.to_csv(\n",
+    "            path_or_buf=\"data/aggregatedDly.csv\",\n",
+    "            sep=\",\",\n",
+    "            columns=final_df.columns.tolist(),\n",
+    "        )\n",
+    "        # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    except Exception as e:\n",
+    "        print(\"[ERROR]\")\n",
+    "        print(e)\n",
+    "\n",
     "    db.cleanup()"
    ]
   },
