--- a/src/WeatherStation/aggregateHly.ipynb
+++ b/src/WeatherStation/aggregateHly.ipynb
@@ -29,6 +29,7 @@
     "MIN_YEAR = 1995\n",
     "MAX_YEAR = 2022\n",
     "TABLENAME = \"agg_hly_weather\"\n",
+    "final_df = None\n",
     "\n",
     "load_dotenv()\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
@@ -268,7 +269,17 @@
     "    listForDF = reshapeHlyData(dates, agg_df, stationData)\n",
     "    final_df = pd.DataFrame(listForDF)\n",
     "\n",
-    "    # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    try:\n",
+    "        final_df.to_csv(\n",
+    "            path_or_buf=\"data/aggregatedHly.csv\",\n",
+    "            sep=\",\",\n",
+    "            columns=final_df.columns.tolist(),\n",
+    "        )\n",
+    "        # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    except Exception as e:\n",
+    "        print(\"[ERROR]\")\n",
+    "        print(e)\n",
+    "\n",
     "    db.cleanup()"
    ]
   },
