--- a/src/ImportErgot/aggregateErgot.ipynb
+++ b/src/ImportErgot/aggregateErgot.ipynb
@@ -13,6 +13,7 @@
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
+    "from Shared.GenericQueryBuilder import GenericQueryBuilder\n",
     "from Shared.DataService import DataService"
    ]
   },
@@ -22,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TABLENAME = \"agg_ergot_sample\"\n",
+    "TABLENAME = \"agg_ergot_samples\"\n",
     "\n",
     "load_dotenv()\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
@@ -143,7 +144,7 @@
     "\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"percnt_true\"\n",
-    "            ] = currSamples[\"incidence\"].sum() / len(currSamples.index)\n",
+    "            ] = currSamples[\"incidence\"].sum() / len(currSamples)\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"has_ergot\"\n",
     "            ] = (currSamples[\"incidence\"].sum() > 0)\n",
@@ -169,17 +170,17 @@
     "\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev1\"\n",
-    "            ] = prev1Year[\"incidence\"].sum() / len(prev1Year.index)\n",
+    "            ] = prev1Year[\"incidence\"].sum() / len(prev1Year)\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev2\"\n",
-    "            ] = prev2Year[\"incidence\"].sum() / len(prev2Year.index)\n",
+    "            ] = prev2Year[\"incidence\"].sum() / len(prev2Year)\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev3\"\n",
-    "            ] = prev3Year[\"incidence\"].sum() / len(prev3Year.index)\n",
+    "            ] = prev3Year[\"incidence\"].sum() / len(prev3Year)\n",
     "            ergot.loc[\n",
     "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid),\n",
     "                \"severity_in_neighbor\",\n",
-    "            ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples.index)\n",
+    "            ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples)\n",
     "\n",
     "    # set any unexpected values to 0\n",
     "    ergot.loc[ergot[\"severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
@@ -188,6 +189,44 @@
     "    ergot.loc[ergot[\"severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0\n",
     "\n",
     "    return ergot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createAggErgotTable(db):\n",
+    "    query = sq.text(\n",
+    "        f\"\"\"\n",
+    "        CREATE TABLE {TABLENAME} (\n",
+    "            sample_id               SERIAL,\n",
+    "            year                    INT,\n",
+    "            province                VARCHAR,\n",
+    "            crop_district           INT,\n",
+    "            incidence               BOOL,\n",
+    "            severity                FLOAT,\n",
+    "            district                INT,\n",
+    "            percnt_true             FLOAT, \n",
+    "            has_ergot               BOOL, \n",
+    "            sum_severity            FLOAT, \n",
+    "            present_prev1           BOOL, \n",
+    "            present_prev2           BOOL, \n",
+    "            present_prev3           BOOL, \n",
+    "            present_in_neighbor     BOOL, \n",
+    "            severity_prev1          FLOAT, \n",
+    "            severity_prev2          FLOAT, \n",
+    "            severity_prev3          FLOAT, \n",
+    "            severity_in_neighbor    FLOAT,\n",
+    "\n",
+    "            CONSTRAINT PK_agg_ergot_sample PRIMARY KEY(sample_id)\n",
+    "        );\n",
+    "        COMMIT;\n",
+    "        \"\"\"\n",
+    "    )\n",
+    "\n",
+    "    db.execute(query)"
    ]
   },
   {
@@ -207,6 +246,7 @@
     "        raise ValueError(\"Environment variables not set\")\n",
     "\n",
     "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    queryBuilder = GenericQueryBuilder()\n",
     "    conn = db.connect()\n",
     "\n",
     "    agRegions = pullAgRegions(conn)\n",
@@ -216,7 +256,20 @@
     "    neighbors = calcNeighbors(agRegions)\n",
     "    ergot = createErgotFeatures(ergot, neighbors)\n",
     "\n",
-    "    ergot.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    try:\n",
+    "        results = sq.text(queryBuilder.tableExistsReq(TABLENAME))\n",
+    "        tableExists = queryBuilder.readTableExists(db.execute(results))\n",
+    "\n",
+    "        if not tableExists:\n",
+    "            createAggErgotTable(db)\n",
+    "\n",
+    "        ergot.to_sql(\n",
+    "            TABLENAME, con=conn, schema=\"public\", if_exists=\"replace\", index=False\n",
+    "        )\n",
+    "        conn.commit()\n",
+    "    except Exception as e:\n",
+    "        print([f\"[ERROR] {e}\"])\n",
+    "\n",
     "    db.cleanup()"
    ]
   },
