added hly data visualizations for their distributions

--- a/src/WeatherStation/hlyDataVisualization.ipynb
+++ b/src/WeatherStation/hlyDataVisualization.ipynb
@@ -57,17 +57,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weatherDataQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT * FROM public.ab_hly_station_data\n",
-    "    UNION\n",
-    "    SELECT * FROM public.mb_hly_station_data\n",
-    "    UNION\n",
-    "    SELECT * FROM public.sk_hly_station_data;\n",
-    "    \"\"\"\n",
-    ")\n",
+    "mbQuery = sq.text(\"SELECT * FROM public.mb_hly_station_data\")\n",
+    "mb_df = pd.read_sql(mbQuery, conn)\n",
     "\n",
-    "hlyDF = pd.read_sql_query(weatherDataQuery, conn)"
+    "skQuery = sq.text(\"SELECT * FROM public.sk_hly_station_data\")\n",
+    "sk_df = pd.read_sql(skQuery, conn)\n",
+    "\n",
+    "abQuery = sq.text(\"SELECT * FROM public.ab_hly_station_data\")\n",
+    "ab_df = pd.read_sql(abQuery, conn)\n",
+    "\n",
+    "hlyDF = pd.concat([mb_df, sk_df, ab_df])"
    ]
   },
   {
@@ -112,6 +111,15 @@
     ")\n",
     "\n",
     "ergotDF = pd.read_sql_query(ergotQuery, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.cleanup()"
    ]
   },
   {
@@ -183,6 +191,7 @@
     "    mask=mask,\n",
     "    cmap=cmap,\n",
     "    vmax=0.1,\n",
+    "    vmin=-0.1,\n",
     "    center=0,\n",
     "    square=True,\n",
     "    linewidths=0.5,\n",
@@ -196,7 +205,224 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.cleanup()"
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
+    "fig.suptitle(\"Temperature\")\n",
+    "\n",
+    "\n",
+    "ax1.hist(ab_df[\"min_temp\"], alpha=0.5, label=\"ab\")\n",
+    "ax1.hist(mb_df[\"min_temp\"], alpha=0.5, label=\"mb\")\n",
+    "ax1.hist(sk_df[\"min_temp\"], alpha=0.5, label=\"sk\")\n",
+    "ax1.title.set_text(\"min\")\n",
+    "ax1.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax2.hist(ab_df[\"mean_temp\"], alpha=0.5, label=\"ab\")\n",
+    "ax2.hist(mb_df[\"mean_temp\"], alpha=0.5, label=\"mb\")\n",
+    "ax2.hist(sk_df[\"mean_temp\"], alpha=0.5, label=\"sk\")\n",
+    "ax2.title.set_text(\"mean\")\n",
+    "ax2.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax3.hist(ab_df[\"max_temp\"], alpha=0.5, label=\"ab\")\n",
+    "ax3.hist(mb_df[\"max_temp\"], alpha=0.5, label=\"mb\")\n",
+    "ax3.hist(sk_df[\"max_temp\"], alpha=0.5, label=\"sk\")\n",
+    "ax3.title.set_text(\"max\")\n",
+    "ax3.legend(loc=\"upper left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
+    "fig.suptitle(\"Dew Point Temperature\")\n",
+    "\n",
+    "\n",
+    "ax1.hist(ab_df[\"min_dew_point_temp\"], alpha=0.5, label=\"ab\")\n",
+    "ax1.hist(mb_df[\"min_dew_point_temp\"], alpha=0.5, label=\"mb\")\n",
+    "ax1.hist(sk_df[\"min_dew_point_temp\"], alpha=0.5, label=\"sk\")\n",
+    "ax1.title.set_text(\"min\")\n",
+    "ax1.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax2.hist(ab_df[\"mean_dew_point_temp\"], alpha=0.5, label=\"ab\")\n",
+    "ax2.hist(mb_df[\"mean_dew_point_temp\"], alpha=0.5, label=\"mb\")\n",
+    "ax2.hist(sk_df[\"mean_dew_point_temp\"], alpha=0.5, label=\"sk\")\n",
+    "ax2.title.set_text(\"mean\")\n",
+    "ax2.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax3.hist(ab_df[\"max_dew_point_temp\"], alpha=0.5, label=\"ab\")\n",
+    "ax3.hist(mb_df[\"max_dew_point_temp\"], alpha=0.5, label=\"mb\")\n",
+    "ax3.hist(sk_df[\"max_dew_point_temp\"], alpha=0.5, label=\"sk\")\n",
+    "ax3.title.set_text(\"max\")\n",
+    "ax3.legend(loc=\"upper left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
+    "fig.suptitle(\"Humidity\")\n",
+    "\n",
+    "\n",
+    "ax1.hist(ab_df[\"min_humidex\"], alpha=0.5, label=\"ab\")\n",
+    "ax1.hist(mb_df[\"min_humidex\"], alpha=0.5, label=\"mb\")\n",
+    "ax1.hist(sk_df[\"min_humidex\"], alpha=0.5, label=\"sk\")\n",
+    "ax1.title.set_text(\"min\")\n",
+    "ax1.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax2.hist(ab_df[\"mean_humidex\"], alpha=0.5, label=\"ab\")\n",
+    "ax2.hist(mb_df[\"mean_humidex\"], alpha=0.5, label=\"mb\")\n",
+    "ax2.hist(sk_df[\"mean_humidex\"], alpha=0.5, label=\"sk\")\n",
+    "ax2.title.set_text(\"mean\")\n",
+    "ax2.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax3.hist(ab_df[\"max_humidex\"], alpha=0.5, label=\"ab\")\n",
+    "ax3.hist(mb_df[\"max_humidex\"], alpha=0.5, label=\"mb\")\n",
+    "ax3.hist(sk_df[\"max_humidex\"], alpha=0.5, label=\"sk\")\n",
+    "ax3.title.set_text(\"max\")\n",
+    "ax3.legend(loc=\"upper left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(ab_df[\"total_precip\"], alpha=0.5, label=\"ab\")\n",
+    "plt.hist(mb_df[\"total_precip\"], alpha=0.5, label=\"mb\")\n",
+    "plt.hist(sk_df[\"total_precip\"], alpha=0.5, label=\"sk\")\n",
+    "plt.legend(loc=\"upper right\")\n",
+    "plt.title(\"Total Precipitation\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
+    "fig.suptitle(\"Humidity\")\n",
+    "\n",
+    "\n",
+    "ax1.hist(ab_df[\"min_rel_humid\"], alpha=0.5, label=\"ab\")\n",
+    "ax1.hist(mb_df[\"min_rel_humid\"], alpha=0.5, label=\"mb\")\n",
+    "ax1.hist(sk_df[\"min_rel_humid\"], alpha=0.5, label=\"sk\")\n",
+    "ax1.title.set_text(\"min\")\n",
+    "ax1.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax2.hist(ab_df[\"mean_rel_humid\"], alpha=0.5, label=\"ab\")\n",
+    "ax2.hist(mb_df[\"mean_rel_humid\"], alpha=0.5, label=\"mb\")\n",
+    "ax2.hist(sk_df[\"mean_rel_humid\"], alpha=0.5, label=\"sk\")\n",
+    "ax2.title.set_text(\"mean\")\n",
+    "ax2.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax3.hist(ab_df[\"max_rel_humid\"], alpha=0.5, label=\"ab\")\n",
+    "ax3.hist(mb_df[\"max_rel_humid\"], alpha=0.5, label=\"mb\")\n",
+    "ax3.hist(sk_df[\"max_rel_humid\"], alpha=0.5, label=\"sk\")\n",
+    "ax3.title.set_text(\"max\")\n",
+    "ax3.legend(loc=\"upper left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
+    "fig.suptitle(\"Station Pressure\")\n",
+    "\n",
+    "\n",
+    "ax1.hist(ab_df[\"min_stn_press\"], alpha=0.5, label=\"ab\")\n",
+    "ax1.hist(mb_df[\"min_stn_press\"], alpha=0.5, label=\"mb\")\n",
+    "ax1.hist(sk_df[\"min_stn_press\"], alpha=0.5, label=\"sk\")\n",
+    "ax1.title.set_text(\"min\")\n",
+    "ax1.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax2.hist(ab_df[\"mean_stn_press\"], alpha=0.5, label=\"ab\")\n",
+    "ax2.hist(mb_df[\"mean_stn_press\"], alpha=0.5, label=\"mb\")\n",
+    "ax2.hist(sk_df[\"mean_stn_press\"], alpha=0.5, label=\"sk\")\n",
+    "ax2.title.set_text(\"mean\")\n",
+    "ax2.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax3.hist(ab_df[\"max_stn_press\"], alpha=0.5, label=\"ab\")\n",
+    "ax3.hist(mb_df[\"max_stn_press\"], alpha=0.5, label=\"mb\")\n",
+    "ax3.hist(sk_df[\"max_stn_press\"], alpha=0.5, label=\"sk\")\n",
+    "ax3.title.set_text(\"max\")\n",
+    "ax3.legend(loc=\"upper left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
+    "fig.suptitle(\"Visibility\")\n",
+    "\n",
+    "\n",
+    "ax1.hist(ab_df[\"min_visibility\"], alpha=0.5, label=\"ab\")\n",
+    "ax1.hist(mb_df[\"min_visibility\"], alpha=0.5, label=\"mb\")\n",
+    "ax1.hist(sk_df[\"min_visibility\"], alpha=0.5, label=\"sk\")\n",
+    "ax1.title.set_text(\"min\")\n",
+    "ax1.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax2.hist(ab_df[\"mean_visibility\"], alpha=0.5, label=\"ab\")\n",
+    "ax2.hist(mb_df[\"mean_visibility\"], alpha=0.5, label=\"mb\")\n",
+    "ax2.hist(sk_df[\"mean_visibility\"], alpha=0.5, label=\"sk\")\n",
+    "ax2.title.set_text(\"mean\")\n",
+    "ax2.legend(loc=\"upper left\")\n",
+    "\n",
+    "ax3.hist(ab_df[\"max_visibility\"], alpha=0.5, label=\"ab\")\n",
+    "ax3.hist(mb_df[\"max_visibility\"], alpha=0.5, label=\"mb\")\n",
+    "ax3.hist(sk_df[\"max_visibility\"], alpha=0.5, label=\"sk\")\n",
+    "ax3.title.set_text(\"max\")\n",
+    "ax3.legend(loc=\"upper left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mb_df.drop(columns=[\"id\", \"station_id\", \"year\", \"month\", \"day\"], inplace=True)\n",
+    "sk_df.drop(columns=[\"id\", \"station_id\", \"year\", \"month\", \"day\"], inplace=True)\n",
+    "ab_df.drop(columns=[\"id\", \"station_id\", \"year\", \"month\", \"day\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mb_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sk_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ab_df.describe()"
    ]
   }
  ],
