added smaller pair plots

--- a/src/Ergot/ergotCorrelation.ipynb
+++ b/src/Ergot/ergotCorrelation.ipynb
@@ -143,6 +143,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sns.pairplot(ergotDF[['percnt_true', 'severity_in_neighbor']])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(ergotDF[['present_prev1', 'present_prev2', 'present_prev3']])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db.cleanup()"
    ]
   }
