--- a/src/Ergot/ergotCorrelation.ipynb
+++ b/src/Ergot/ergotCorrelation.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.pairplot(ergotDF[['percnt_true', 'severity_in_neighbor']])\n",
+    "sns.pairplot(ergotDF[[\"percnt_true\", \"severity_in_neighbor\"]])\n",
     "plt.show()"
    ]
   },
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.pairplot(ergotDF[['present_prev1', 'present_prev2', 'present_prev3']])\n",
+    "sns.pairplot(ergotDF[[\"present_prev1\", \"present_prev2\", \"present_prev3\"]])\n",
     "plt.show()"
    ]
   },
