--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -94,8 +94,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_data = soil_data[[\"id\", \"province\", \"kind\", \"water_table\", \"root_restrict\", \"drainage\", \"parent_material_texture_1\", \"parent_material_chemical_1\", \"mode_of_depo_1\", 'percnt_coarse_frag', 'sand_texture', 'total_sand', 'total_silt', 'total_clay', 'percnt_carbon', 'calcium_ph', 'proj_ph',  'water_reten_0', 'water_reten_10', 'water_reten_33',\n",
-    "       'water_reten_1500', 'bulk_density','elec_cond', 'percnt_wood']]"
+    "soil_data = soil_data[\n",
+    "    [\n",
+    "        \"id\",\n",
+    "        \"province\",\n",
+    "        \"kind\",\n",
+    "        \"water_table\",\n",
+    "        \"root_restrict\",\n",
+    "        \"drainage\",\n",
+    "        \"parent_material_texture_1\",\n",
+    "        \"parent_material_chemical_1\",\n",
+    "        \"mode_of_depo_1\",\n",
+    "        \"percnt_coarse_frag\",\n",
+    "        \"sand_texture\",\n",
+    "        \"total_sand\",\n",
+    "        \"total_silt\",\n",
+    "        \"total_clay\",\n",
+    "        \"percnt_carbon\",\n",
+    "        \"calcium_ph\",\n",
+    "        \"proj_ph\",\n",
+    "        \"water_reten_0\",\n",
+    "        \"water_reten_10\",\n",
+    "        \"water_reten_33\",\n",
+    "        \"water_reten_1500\",\n",
+    "        \"bulk_density\",\n",
+    "        \"elec_cond\",\n",
+    "        \"percnt_wood\",\n",
+    "    ]\n",
+    "]"
    ]
   },
   {
@@ -181,7 +207,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_components = soil_components[[\"poly_id\", \"cmp\", \"percent\", \"province\", \"profile\", \"soil_id\", \"water_holding_cap\"]]"
+    "soil_components = soil_components[\n",
+    "    [\"poly_id\", \"cmp\", \"percent\", \"province\", \"profile\", \"soil_id\", \"water_holding_cap\"]\n",
+    "]"
    ]
   },
   {
@@ -224,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_data.rename(columns={\"id\":\"soil_id\"}, inplace=True)"
+    "soil_data.rename(columns={\"id\": \"soil_id\"}, inplace=True)"
    ]
   },
   {
@@ -242,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_df = soil_components.merge(soil_data, on=[\"soil_id\",\"province\"], how=\"inner\")"
+    "merge_df = soil_components.merge(soil_data, on=[\"soil_id\", \"province\"], how=\"inner\")"
    ]
   },
   {
@@ -323,8 +351,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_df = pd.get_dummies(merge_df, columns=[\"profile\", \"kind\", \"water_table\", 'root_restrict', 'drainage',\n",
-    "       'parent_material_texture_1', 'parent_material_chemical_1', 'mode_of_depo_1', 'sand_texture'])"
+    "merge_df = pd.get_dummies(\n",
+    "    merge_df,\n",
+    "    columns=[\n",
+    "        \"profile\",\n",
+    "        \"kind\",\n",
+    "        \"water_table\",\n",
+    "        \"root_restrict\",\n",
+    "        \"drainage\",\n",
+    "        \"parent_material_texture_1\",\n",
+    "        \"parent_material_chemical_1\",\n",
+    "        \"mode_of_depo_1\",\n",
+    "        \"sand_texture\",\n",
+    "    ],\n",
+    ")"
    ]
   },
   {
@@ -342,7 +382,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_df['water_holding_cap'] = pd.to_numeric(merge_df['water_holding_cap'], errors='coerce')"
+    "merge_df[\"water_holding_cap\"] = pd.to_numeric(\n",
+    "    merge_df[\"water_holding_cap\"], errors=\"coerce\"\n",
+    ")"
    ]
   },
   {
@@ -360,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_df.groupby(['poly_id','province','soil_id']).agg('mean').reset_index()"
+    "merge_df.groupby([\"poly_id\", \"province\", \"soil_id\"]).agg(\"mean\").reset_index()"
    ]
   },
   {
