--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -63,26 +63,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the boundaries for the agriculture regions\n",
-    "query = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")  # type: ignore\n",
-    "agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")  # type: ignore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agRegions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "query = sq.text(\"select * FROM public.soil_data\")\n",
     "soil_data = pd.read_sql(query, conn)\n",
     "soil_data.head()"
@@ -244,13 +224,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "soil_data.rename(columns={\"id\": \"soil_id\"}, inplace=True)"
    ]
@@ -307,6 +280,15 @@
    "outputs": [],
    "source": [
     "merge_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_df = merge_df.merge(soil_geometry, on=\"poly_id\", how=\"inner\")"
    ]
   },
   {
