fix notebook, black

--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -70,17 +70,11 @@
     "MIN_YEAR = 1995\n",
     "MAX_YEAR = 2023\n",
     "\n",
-    "# # the year range we want to pull data from\n",
-    "# years = [\n",
-    "#     str(year) for year in range(MIN_YEAR, MAX_YEAR + 1)\n",
-    "# ]\n",
+    "# the year range we want to pull data from\n",
+    "years = [str(year) for year in range(MIN_YEAR, MAX_YEAR + 1)]\n",
     "\n",
-    "# # the month range we want to pull data from\n",
-    "# months = [\n",
-    "#     str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)\n",
-    "# ]\n",
-    "years = [\"1995\"]\n",
-    "months = [\"1\"]\n",
+    "# the month range we want to pull data from\n",
+    "months = [str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)]\n",
     "\n",
     "ATTRS = [  # the attributes we want to pull data for\n",
     "    \"2m_dewpoint_temperature\",\n",
