--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -45,16 +45,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (\n",
-    "    PG_DB is None\n",
-    "    or PG_ADDR is None\n",
-    "    or PG_PORT is None\n",
-    "    or PG_USER is None\n",
-    "    or PG_PW is None\n",
-    "):\n",
-    "    raise ValueError(\"Environment variables not set\")\n",
     "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "conn = db.connect()"
+    "conn = db.connect()\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -63,22 +57,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = sq.text(\"select * FROM public.soil_data\")\n",
-    "soil_data = pd.read_sql(query, conn)\n",
-    "soil_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soil_data = soil_data[\n",
+    "def pullSoilData(conn):\n",
+    "    query = sq.text(\"select * FROM public.soil_data\")\n",
+    "    soil_data = pd.read_sql(query, conn)\n",
+    "    soil_data = soil_data[\n",
     "    [\n",
     "        \"id\",\n",
     "        \"province\",\n",
     "        \"kind\",\n",
+    "        \"name\",\n",
     "        \"water_table\",\n",
     "        \"root_restrict\",\n",
     "        \"drainage\",\n",
@@ -101,7 +88,9 @@
     "        \"elec_cond\",\n",
     "        \"percnt_wood\",\n",
     "    ]\n",
-    "]"
+    "    ]\n",
+    "    soil_data.rename(columns={\"id\": \"soil_id\"}, inplace=True)\n",
+    "    return soil_data"
    ]
   },
   {
@@ -110,32 +99,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = sq.text(\"select * FROM public.soil_surronding_land\")\n",
-    "surronding_soil = pd.read_sql(query, conn)\n",
-    "surronding_soil.head()"
+    "def pullSurroundingSoil(conn):\n",
+    "    query = sq.text(\"select * FROM public.soil_surronding_land\")\n",
+    "    surronding_soil = pd.read_sql(query, conn)\n",
+    "    surronding_soil.head()\n",
+    "    surronding_soil = surronding_soil[[\"poly_id\", \"land_area\", \"water_area\"]]\n",
+    "    return surronding_soil"
    ]
   },
   {
@@ -144,7 +113,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "surronding_soil = surronding_soil[[\"poly_id\", \"land_area\", \"water_area\"]]"
+    "def pullSoilComponents(conn):\n",
+    "    query = sq.text(\"select * FROM public.soil_components\")\n",
+    "    soil_components = pd.read_sql(query, conn)\n",
+    "    soil_components = soil_components[\n",
+    "        [\"poly_id\", \"cmp\", \"percent\", \"province\", \"profile\", \"soil_id\", \"water_holding_cap\"]\n",
+    "    ]\n",
+    "    return soil_components"
    ]
   },
   {
@@ -153,32 +128,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "surronding_soil.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = sq.text(\"select * FROM public.soil_components\")\n",
-    "soil_components = pd.read_sql(query, conn)\n",
-    "soil_components.head()"
+    "def pullSoilGeometry(conn):\n",
+    "\n",
+    "    # load the boundaries for the agriculture regions\n",
+    "    query = sq.text(\"select district, geometry FROM public.census_ag_regions\")  # type: ignore\n",
+    "    agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")  # type: ignore    \n",
+    "\n",
+    "    query = sq.text(\"select * FROM public.soil_geometry\")\n",
+    "    soilRegions = gpd.GeoDataFrame.from_postgis(\n",
+    "            query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    "    )\n",
+    "\n",
+    "        \n",
+    "    soil_geometry = gpd.sjoin(soilRegions, agRegions, how=\"inner\", op=\"intersects\")\n",
+    "    soil_geometry.drop(columns=[\"geometry\", \"index_right\"], inplace=True)\n",
+    "    soil_geometry = pd.DataFrame(soil_geometry)\n",
+    "    return soil_geometry\n",
+    "    "
    ]
   },
   {
@@ -187,153 +153,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soil_components = soil_components[\n",
-    "    [\"poly_id\", \"cmp\", \"percent\", \"province\", \"profile\", \"soil_id\", \"water_holding_cap\"]\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soil_components.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = sq.text(\"select * FROM public.soil_geometry\")\n",
-    "soil_geometry = pd.read_sql(query, conn)\n",
-    "soil_geometry.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soil_data.rename(columns={\"id\": \"soil_id\"}, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soil_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df = soil_components.merge(soil_data, on=[\"soil_id\", \"province\"], how=\"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# merge_df = merge_df.merge(soil_geometry, on=\"poly_id\", how=\"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df = merge_df.merge(surronding_soil, on=\"poly_id\", how=\"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df = merge_df.merge(soil_geometry, on=\"poly_id\", how=\"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df.duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df = merge_df.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df = pd.get_dummies(\n",
+    "def getMergedf(soil_data, surronding_soil, soil_components, soil_geometry):\n",
+    "    merge_df = soil_components.merge(soil_data, on=[\"soil_id\", \"province\"], how=\"inner\")\n",
+    "    merge_df = merge_df.merge(surronding_soil, on=\"poly_id\", how=\"inner\")\n",
+    "    merge_df = merge_df.merge(soil_geometry, on=\"poly_id\", how=\"inner\")\n",
+    "    merge_df.duplicated().sum()\n",
+    "    merge_df = merge_df.drop_duplicates()\n",
+    "    merge_df = pd.get_dummies(\n",
     "    merge_df,\n",
     "    columns=[\n",
     "        \"profile\",\n",
@@ -346,7 +172,12 @@
     "        \"mode_of_depo_1\",\n",
     "        \"sand_texture\",\n",
     "    ],\n",
-    ")"
+    "    )\n",
+    "    merge_df[\"water_holding_cap\"] = pd.to_numeric(\n",
+    "        merge_df[\"water_holding_cap\"], errors=\"coerce\"\n",
+    "    )\n",
+    "    merge_df.groupby([\"poly_id\", \"province\", \"soil_id\", \"name\"]).agg(\"mean\").reset_index()\n",
+    "    return merge_df"
    ]
   },
   {
@@ -355,7 +186,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_df.columns"
+    "def main():\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    conn = db.connect()\n",
+    "    soil_data = pullSoilData(conn)\n",
+    "    surronding_soil = pullSurroundingSoil(conn)\n",
+    "    soil_components = pullSoilComponents(conn)\n",
+    "    soil_geometry = pullSoilGeometry(conn)\n",
+    "    merge_df = getMergedf(soil_data, surronding_soil, soil_components, soil_geometry)\n",
+    "    TABLENAME = \"agg_soil_data\"\n",
+    "    merge_df.tosql(TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False)\n"
    ]
   },
   {
@@ -364,45 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_df[\"water_holding_cap\"] = pd.to_numeric(\n",
-    "    merge_df[\"water_holding_cap\"], errors=\"coerce\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df.groupby([\"poly_id\", \"province\", \"soil_id\"]).agg(\"mean\").reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merge_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.cleanup()"
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
