--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -208,7 +208,7 @@
     "    ):\n",
     "        raise ValueError(\"Environment variables not set\")\n",
     "\n",
-    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
     "    conn = db.connect()\n",
     "\n",
     "    # get data\n",
