--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -11,13 +11,13 @@
     "import geopandas as gpd  # type: ignore\n",
     "\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq\n",
+    "import sqlalchemy as sq  # type: ignore\n",
     "import sys\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService"
+    "from Shared.DataService import DataService  # type: ignore"
    ]
   },
   {
@@ -37,16 +37,6 @@
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
     "PG_PW = os.getenv(\"POSTGRES_PW\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "conn = db.connect()"
    ]
   },
   {
@@ -208,7 +198,7 @@
     "    ):\n",
     "        raise ValueError(\"Environment variables not set\")\n",
     "\n",
-    "    db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "    conn = db.connect()\n",
     "\n",
     "    # get data\n",
